criação de uma nova tela mostrado as informação dos pokemons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    
+    <h1 class="title">Pokedex</h1>
     <ul></ul>
     <script src="./scrip.js"></script>
 </body>
